add: Добавил логирование, улучшил сортировку в List, убрал все лишнее
